AI-1543 Fixes text alignment in details tab

--- a/ui/app2/src/main/java/org/activityinfo/ui/client/page/common/Application.css
+++ b/ui/app2/src/main/java/org/activityinfo/ui/client/page/common/Application.css
@@ -94,8 +94,11 @@
     padding-top: 10px;
 }
 
-.details .indicatorValue {
+.details .indicatorQuantity {
     text-align: right;
+}
+
+.details .indicatorText {
 }
 
 .details .indicatorGroupChild {
